@@ -6,7 +6,7 @@
 #  the file COPYING, distributed as part of this software.
 #*****************************************************************************
 
-# $Id: usage.py 998 2006-01-09 06:57:40Z fperez $
+# $Id: usage.py 1092 2006-01-27 23:56:32Z vivainio $
 
 from IPython import Release
 __author__  = '%s <%s>' % Release.authors['Fernando']
@@ -597,3 +597,44 @@ MAIN FEATURES
         won't work:
             >>> x = ,my_function /home/me    # syntax error
 """
+
+quick_reference = r"""
+IPython -- An enhanced Interactive Python - Quick Reference Card
+================================================================
+
+obj?, obj??, ?obj,??obj   : Get help, or more help for object
+?os.p*           : List names in os starting with p
+
+Example magic:
+    
+%alias d ls -F   : 'd' is now an alias for 'ls -F'
+alias d ls -F    : Works if 'alias' not a python name
+alist = %alias   : Get list of aliases to 'alist'
+
+System commands:
+    
+!cp a.txt b/     : System command escape, calls os.system()
+cp a.txt b/      : after %rehash, most system commands work without !
+cp ${f}.txt $bar : Variable expansion in magics and system commands
+files = ls /usr  : Capture sytem command output
+files.s, files.l, files.n: "a b c", ['a','b','c'], 'a\nb\nc'
+cd /usr/share    : Obvious, also 'cd d:\home\_ipython' works
+
+History:
+
+_i, _ii, _iii    : Previous, next previous, next next previous input
+_ih[4], _ih[2:5] : Input history line 4, lines 2-4
+_, __, ___       : previous, next previous, next next previous output
+_dh              : Directory history
+_oh              : Output history
+%hist            : Command history
+
+Autocall:
+
+f 1 2            : f(1,2)
+,f 1 2           : f("1","2")
+;f 1 2           : f("1 2")
+
+"""
+
+
